# Patient-monitoring-system

./: .gitignore  COMPLETE_TEST_SUMMARY.md  DASHBOARD_TESTING_GUIDE.md  EVALUATION_SUITE_SUMMARY.md  GUARDRAILS_SUMMARY.md  LIVE_SYSTEM_TEST.md  MCP_CONVERSION_SUMMARY.md  MCP_README.md  README.md  TEST_RESULTS.md  mcp_config_example.json  mcp_requirements.txt  mcp_server.py  test_mcp.py
backend/: .env.example  config.py  database.py  main.py  pyproject.toml  requirements.txt  test_app.py
backend/agents/: __init__.py  clinical_triage.py  phi_deidentifier.py  supervisor.py  vitals_intake.py
backend/data/: clinical_guidelines.md  sample_patients.json
backend/data/discharge_summaries/: appendectomy.md  cardiac_surgery.md  hip_replacement.md
backend/models/: alerts.py  conversation.py  patient.py
backend/routers/: __init__.py  alerts_router.py  chat_router.py  patients_router.py
backend/services/: __init__.py  alert_service.py  conversation_service.py  patient_service.py  rag_service.py  vitals_service.py
backend/static/: index.html
backend/tests/: README.md  __init__.py  evaluation_report.json  results_test_clinical_triage.py.xml  results_test_integration.py.xml  results_test_phi_deidentifier.py.xml  results_test_rag_service.py.xml  results_test_supervisor.py.xml  results_test_vitals_intake.py.xml  run_evals.py  test_clinical_triage.py  test_integration.py  test_phi_deidentifier.py  test_rag_service.py  test_supervisor.py  test_vitals_intake.py
